security: fix SSRF in LinkPreviewService + reject wildcard CORS origins
P0-2: LinkPreviewService SSRF protection
- Validate URL scheme (http/https only), block file/ftp/gopher
- Resolve DNS and reject private/loopback/link-local/multicast IPs
- Disable auto-redirects, verify redirect targets with SSRF check
- Bounded cache (max 1000 entries) replaces unbounded ConcurrentHashMap
- Properly disconnect HttpURLConnection in finally blocks

P0-3: WebSocket & REST CORS origin hardening
- WebSocketConfig rejects standalone '*' wildcard, logs configured origins
- SecurityConfig applies same wildcard rejection for REST CORS
- Both log warnings if '*' is attempted or no origins configured

Tests: +40 new tests in SecurityAuditTest (319 total, 0 failures)
- SSRF scheme validation (file/ftp/gopher/no-scheme blocked)
- Private IP blocking (127.x, 10.x, 172.16-31.x, 192.168.x, 169.254.x, ::1, 0.0.0.0)
- isPrivateOrReserved unit tests for all IP categories
- fetchPreview null-safety for SSRF and null URLs
- WebSocketConfig wildcard rejection, valid origins kept, whitespace trimming
- SecurityConfig wildcard rejection, valid origins kept